tests/snapshots/api/node0_v1_availability_state_cert_v2.snap
---
source: tests/common/api_snapshot.rs
---
auth_root: "<string>"
epoch: "<number>"
light_client_state: "<string>"
next_stake_table_state: "<string>"
signatures:
  - - "<string>"
