tests/snapshots/api/node0_v1_availability_transaction_by_position_noproof.snap
---
source: tests/common/api_snapshot.rs
---
block_hash: "<string>"
block_height: "<number>"
hash: "<string>"
index: "<number>"
namespace: "<number>"
pos_in_namespace: "<number>"
transaction:
  namespace: "<number>"
  payload: "<string>"
