tests/snapshots/api/node0_v1_availability_vid_common_0.snap
---
source: tests/common/api_snapshot.rs
---
block_hash: "<masked>"
common:
  V1:
    recovery_threshold: 1
    total_weights: 1
height: 0
payload_hash: AvidMCommit~8JNU_HGmIatiu1NdaEgDp-VIdiHrlYRz49Cq6TE3kzZf
