tests/snapshots/api/node0_v1_block_state_path_by_height.snap
---
source: tests/common/api_snapshot.rs
---
pos: "<string>"
proof:
  - Leaf:
      elem: "<string>"
      pos: "<string>"
      value: "<string>"
  - Branch:
      children:
        - ForgettenSubtree:
            value: "<string>"
        - "<string>"
      value: "<string>"
