tests/snapshots/api/node0_v1_database_migration_status.snap
---
source: tests/common/api_snapshot.rs
---
- completed_at: "<string>"
  last_offset: "<number>"
  name: "<string>"
  started_at: "<string>"
