tests/snapshots/api/node0_v1_database_table_sizes.snap
---
source: tests/common/api_snapshot.rs
---
- row_count: "<number>"
  table_name: "<string>"
  total_size_bytes: "<number>"
